add download userList without @RestController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ spring.datasource.hikari.maximum-pool-size=5
 
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+#spring.thymeleaf.template-resolver-order=0
+spring.thymeleaf.excluded-view-names
 
